--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,3 +95,13 @@
 /></noscript>
 
 <!-- End Facebook Pixel Code -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-166240298-1"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'UA-166240298-1');
+</script>
